--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "meichenliu",
   "description": "Personal Website",
   "version": "1.0.0",
-  "author": "Brittany Chiang <brittany.chiang@gmail.com>",
+  "author": "Meichen Liu",
   "repository": {
     "type": "git",
     "url": "https://github.com/meichen1/meichenliu68"
